<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".fragment.AutoControllerFragment">


  <Button
    android:id="@+id/picture_switch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:text="@string/picture_switch"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


  <LinearLayout
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_width="70dp"
      android:layout_height="wrap_content"
      android:text="@string/lateral_deviation" />

    <TextView
      android:text="-0.428"
      android:id="@+id/lateral_deviation_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="24dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_width="35dp"
      android:layout_height="wrap_content"
      android:text="@string/mode" />

    <TextView
      android:id="@+id/rtk_mode_tv"
      android:text="4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/amplitude_settings"
    app:layout_constraintStart_toStartOf="@id/picture_switch"
    app:layout_constraintTop_toBottomOf="@+id/picture_switch">


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_direction" />

      <TextView
        android:id="@+id/vehicle_direction_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="左前" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/course_deviation" />

      <TextView
        android:id="@+id/course_deviation_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="7.80911" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/front_wheel_angle" />

      <TextView
        android:id="@+id/front_wheel_angle_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="1.41942" />
    </LinearLayout>


  </LinearLayout>

  <Button
    android:id="@+id/amplitude_settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginBottom="16dp"
    android:text="@string/amplitude_width_settings"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
      android:id="@+id/btn_turn_left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/turn_left" />

    <Button
      android:id="@+id/btn_turn_right"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/turn_right" />


  </LinearLayout>


  <com.hc.mixthebluetooth.view.LocationButtons
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>