<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.ManualControllerActivity">


  <LinearLayout
    android:id="@+id/speedControllerParent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.7">

    <Button
      android:id="@+id/btn_forward"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_forward" />

    <Button
      android:id="@+id/btn_stop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_stop"
      android:textColor="@color/red" />

    <Button
      android:id="@+id/btn_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_back" />


  </LinearLayout>

  <com.hc.mixthebluetooth.view.LateralMoveBar
    android:id="@+id/lateral_move_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.921"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.7" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/lateral_move_bar"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.088">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rudder_amidships" />

    <CheckBox
      android:id="@+id/rudder_check_box"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
